# aws-signer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: aws_signer.rs  aws_v4_signer.rs  backup  lib.rs  utils.rs
